force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/OCX_Expansion_Rule_Condition__c.object-meta.xml
<CustomObject>
    <description>One validated Account field condition belonging to an Expansion Qualification Rule.</description>
    <label>Expansion Rule Condition</label>
    <nameField><displayFormat>ERC-{00000}</displayFormat><label>Condition Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Expansion Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>