force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/fields/OCX_Active__c.field-meta.xml
<CustomField>
    <fullName>OCX_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>