force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/fields/OCX_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>OCX_Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value><fullName>String</fullName><default>false</default><label>String</label></value>
        <value><fullName>Picklist</fullName><default>false</default><label>Picklist</label></value>
        <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
        <value><fullName>Integer</fullName><default>false</default><label>Integer</label></value>
        <value><fullName>Double</fullName><default>false</default><label>Double</label></value>
        <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
        <value><fullName>Percent</fullName><default>false</default><label>Percent</label></value>
        <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
        <value><fullName>DateTime</fullName><default>false</default><label>DateTime</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>