force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/fields/OCX_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>OCX_Field_Label__c</fullName>
    <label>Account Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>