force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/fields/OCX_Operator__c.field-meta.xml
<CustomField>
    <fullName>OCX_Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value><fullName>Equals</fullName><default>false</default><label>Equals</label></value>
        <value><fullName>Not Equal</fullName><default>false</default><label>Not Equal</label></value>
        <value><fullName>Greater Than</fullName><default>false</default><label>Greater Than</label></value>
        <value><fullName>Greater Than or Equal</fullName><default>false</default><label>Greater Than or Equal</label></value>
        <value><fullName>Less Than</fullName><default>false</default><label>Less Than</label></value>
        <value><fullName>Less Than or Equal</fullName><default>false</default><label>Less Than or Equal</label></value>
        <value><fullName>Contains</fullName><default>false</default><label>Contains</label></value>
        <value><fullName>In</fullName><default>false</default><label>In</label></value>
        <value><fullName>Is Blank</fullName><default>false</default><label>Is Blank</label></value>
        <value><fullName>Is Not Blank</fullName><default>false</default><label>Is Not Blank</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>