force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/fields/OCX_Rule__c.field-meta.xml
<CustomField>
    <fullName>OCX_Rule__c</fullName>
    <label>Qualification Rule</label>
    <referenceTo>OCX_Expansion_Qualification_Rule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>