force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/fields/OCX_Sequence__c.field-meta.xml
<CustomField>
    <fullName>OCX_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>