force-app/main/default/objects/OCX_Expansion_Rule_Condition__c/fields/OCX_Value__c.field-meta.xml
<CustomField>
    <fullName>OCX_Value__c</fullName>
    <label>Comparison Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>